clients/include/rocblas_fortran.hpp

rocblas_status rocblas_zdotu_fortran(rocblas_handle                handle,
                                     rocblas_int                   n,
                                     const rocblas_double_complex* x,
                                     rocblas_int                   incx,
                                     const rocblas_double_complex* y,
                                     rocblas_int                   incy,
                                     rocblas_double_complex*       result);
rocblas_status rocblas_cdotc_fortran(rocblas_handle               handle,
                                     rocblas_int                  n,
                                     const rocblas_float_complex* x,
                                     rocblas_int                  incx,
                                     const rocblas_float_complex* y,
                                     rocblas_int                  incy,
                                     rocblas_float_complex*       result);
rocblas_status rocblas_zdotc_fortran(rocblas_handle                handle,
                                     rocblas_int                   n,
                                     const rocblas_double_complex* x,
                                     rocblas_int                   incx,
                                     const rocblas_double_complex* y,
                                     rocblas_int                   incy,
                                     rocblas_double_complex*       result);
// dot_batched
rocblas_status rocblas_sdot_batched_fortran(rocblas_handle     handle,
                                            rocblas_int        n,
                                            const float* const x[],
                                            rocblas_int        incx,
                                            const float* const y[],
                                            rocblas_int        incy,
                                            rocblas_int        batch_count,
                                            float*             result);
rocblas_status rocblas_ddot_batched_fortran(rocblas_handle      handle,
                                            rocblas_int         n,
                                            const double* const x[],
                                            rocblas_int         incx,
                                            const double* const y[],
                                            rocblas_int         incy,
                                            rocblas_int         batch_count,
                                            double*             result);
rocblas_status rocblas_hdot_batched_fortran(rocblas_handle            handle,
                                            rocblas_int               n,
                                            const rocblas_half* const x[],
                                            rocblas_int               incx,
                                            const rocblas_half* const y[],
                                            rocblas_int               incy,
                                            rocblas_int               batch_count,
                                            rocblas_half*             result);
rocblas_status rocblas_bfdot_batched_fortran(rocblas_handle                handle,
                                             rocblas_int                   n,
                                             const rocblas_bfloat16* const x[],
                                             rocblas_int                   incx,
                                             const rocblas_bfloat16* const y[],
                                             rocblas_int                   incy,
                                             rocblas_int                   batch_count,
                                             rocblas_bfloat16*             result);
rocblas_status rocblas_cdotu_batched_fortran(rocblas_handle                     handle,
                                             rocblas_int                        n,
                                             const rocblas_float_complex* const x[],
                                             rocblas_int                        incx,
                                             const rocblas_float_complex* const y[],
                                             rocblas_int                        incy,
                                             rocblas_int                        batch_count,
                                             rocblas_float_complex*             result);
rocblas_status rocblas_zdotu_batched_fortran(rocblas_handle                      handle,
                                             rocblas_int                         n,
                                             const rocblas_double_complex* const x[],
                                             rocblas_int                         incx,
                                             const rocblas_double_complex* const y[],
                                             rocblas_int                         incy,
                                             rocblas_int                         batch_count,
                                             rocblas_double_complex*             result);
rocblas_status rocblas_cdotc_batched_fortran(rocblas_handle                     handle,
                                             rocblas_int                        n,
                                             const rocblas_float_complex* const x[],
                                             rocblas_int                        incx,
                                             const rocblas_float_complex* const y[],
                                             rocblas_int                        incy,
                                             rocblas_int                        batch_count,
                                             rocblas_float_complex*             result);
rocblas_status rocblas_zdotc_batched_fortran(rocblas_handle                      handle,
                                             rocblas_int                         n,
                                             const rocblas_double_complex* const x[],
                                             rocblas_int                         incx,
                                             const rocblas_double_complex* const y[],
                                             rocblas_int                         incy,
                                             rocblas_int                         batch_count,
                                             rocblas_double_complex*             result);
// dot_strided_batched
rocblas_status rocblas_sdot_strided_batched_fortran(rocblas_handle handle,
                                                    rocblas_int    n,
                                                    const float*   x,
                                                    rocblas_int    incx,
                                                    rocblas_stride stridex,
                                                    const float*   y,
                                                    rocblas_int    incy,
                                                    rocblas_stride stridey,
                                                    rocblas_int    batch_count,
                                                    float*         result);
rocblas_status rocblas_ddot_strided_batched_fortran(rocblas_handle handle,
                                                    rocblas_int    n,
                                                    const double*  x,
                                                    rocblas_int    incx,
                                                    rocblas_stride stridex,
                                                    const double*  y,
                                                    rocblas_int    incy,
                                                    rocblas_stride stridey,
                                                    rocblas_int    batch_count,
                                                    double*        result);
rocblas_status rocblas_hdot_strided_batched_fortran(rocblas_handle      handle,
                                                    rocblas_int         n,
                                                    const rocblas_half* x,
                                                    rocblas_int         incx,
                                                    rocblas_stride      stridex,
                                                    const rocblas_half* y,
                                                    rocblas_int         incy,
                                                    rocblas_stride      stridey,
                                                    rocblas_int         batch_count,
                                                    rocblas_half*       result);
rocblas_status rocblas_bfdot_strided_batched_fortran(rocblas_handle          handle,
                                                     rocblas_int             n,
                                                     const rocblas_bfloat16* x,
                                                     rocblas_int             incx,
                                                     rocblas_stride          stridex,
                                                     const rocblas_bfloat16* y,
                                                     rocblas_int             incy,
                                                     rocblas_stride          stridey,
                                                     rocblas_int             batch_count,
                                                     rocblas_bfloat16*       result);
rocblas_status rocblas_cdotu_strided_batched_fortran(rocblas_handle               handle,
                                                     rocblas_int                  n,
                                                     const rocblas_float_complex* x,
                                                     rocblas_int                  incx,
                                                     rocblas_stride               stridex,
                                                     const rocblas_float_complex* y,
                                                     rocblas_int                  incy,
                                                     rocblas_stride               stridey,
                                                     rocblas_int                  batch_count,
                                                     rocblas_float_complex*       result);